--- a/application-container.yml
+++ b/application-container.yml
@@ -1,4 +1,9 @@
 spring:
+  cloud:
+    stream:
+      kafka:
+        binder:
+          brokers: yoke-kafka:9092
   datasource:
     url: jdbc:postgresql://yoke-postgres:5432/postgres
 
